minor cosmetic changes, Noticed a bug where the words on the right pictures are not displaying on mobile correctly. not sure why - need to figure that out

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 .nameSecond{
     font-family: 'Poppins', sans-serif;
     font-size: 8rem;
-    font-weight: bold;
+    font-weight: 500;
     position: absolute;
     bottom: 0;
 }
@@ -92,6 +92,10 @@
     font-style: italic;
     font-family: 'Poppins', sans-serif;
     position: relative;
+}
+span{
+ color: var(--theme);
+ font-size: inherit;
 }
 
 @media (max-width:1600px){
